# udp_pro

./: README.md
udp_transmission/: CMakeLists.txt  README.md  config.h
udp_transmission/command/: Client_cmd.cpp  Server_cmd.cpp
udp_transmission/image/: Client_img.cpp  Server_img.cpp
udp_transmission/lib/: PracticalSocket.cpp
udp_transmission/message/: Client_msg.cpp  Server_msg.cpp  msg3030.txt
udp_transmission/script/: equipment_router.sh  equipment_router3.sh  equipment_router_end.sh  equipment_simulation.sh  init_kill.sh  kill_video.sh  send_sim.sh  test_vehicle.sh  test_vehicle_router.sh
udp_transmission/video/: Client_video.cpp  Server_video.cpp
upd_img/: equipment.py  job.sh  listener.py  nohup.out  position.txt  test.py  upd_image.py  upd_position.py  upd_take_over.py
upd_img/old/: python实现udp图片传输.md  trans_code.py  udp_client.py  udp_client_1.py  udp_client_2.py  udp_client_pro.py  udp_server2.py  udp_server22.py  udp_sever.py  udp中c接口.md  upd_sever_pro.py
